--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -14,5 +14,11 @@ spring:
    redis:
      host: 127.0.0.1
      port: 6379
+   application:
+       name: service-wx
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8081/eureka/
 
 
