--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
    application:
      name: xbwxapi
    profiles:
-     active: prod
+     active: dev
 
 # mybatis配置
 mybatis:
@@ -12,7 +12,10 @@ mybatis:
   mapper-locations:
 #    - mybatis/SKTMapper.xml
      - mybatis/*Mapper.xml
-
+dyaccessKeyId: 23765252
+dyaccessKeySecret: 0463628d1cf98086c51ba8d3d8e49eca
+dyurl: "http://gw.api.taobao.com/router/rest"
+dySmsTemplateCode: "SMS_62920148"
 #aes加解密密钥
 aeskey: "FHhPatHL4DF8link"
 #redis 数据库
